<resources>
    <string name="app_name">Workflow</string>
    <string name="app_name_v1">Borsa Production</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_sign_out">Exit</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="field_required">%s is required</string>
    <string name="field_required_simple">Is required</string>
    <string name="field_length_min_3">Minimal 3 digits</string>
    <string name="validation_select_value">Select one</string>
    <string name="validation_invalid_password">Password invalid</string>
    <string name="validation_invalid_password_suggestion">Password has to be at least one number, one capital letter and one small letter</string>
    <string name="validation_password_not_match">Passwords do not match</string>
    <string name="validation_choose_a_position">Please choose at least one position</string>
    <string name="validation_article_no_length">Article is maximum 7 characters</string>
    <string name="this_field">this field</string>
    <string name="click_twice_to_close">Click one more time to exit</string>
    <string name="action_mode_item_chosen">%d items selected</string>
    <string name="empty_data_desc">Data not found</string>
    <string name="my_role">My role: %s</string>
    <string name="no_connection">There is no internet connectivity</string>
    <string name="search_article_no">Search Article</string>
    <string name="search_worker">Search Artisan</string>
    <string name="search_work">Search Job Order No. / Article</string>
    <string name="position_drawer">Draw Upper</string>
    <string name="position_sewer">Sew Upper</string>
    <string name="position_assembler">Assembly</string>
    <string name="position_sole_stitcher">Sew Outsole</string>
    <string name="position_lining_drawer">Draw Lining</string>
    <string name="position_insole_stitcher">Sew Insole</string>
    <string name="position_all">All</string>
    <string name="position_drawer_lower">draw upper</string>
    <string name="position_sewer_lower">sew upper</string>
    <string name="position_assembler_lower">assembly</string>
    <string name="position_sole_stitcher_lower">sew outsole</string>
    <string name="position_drawn">upper_drawn</string>
    <string name="position_sewn">upper sewn</string>
    <string name="position_assembled">assembled</string>
    <string name="position_sole_stitched">outsole sewn</string>
    <string name="position_lining_drawn">lining drawn</string>
    <string name="position_insole_stitched">insole sewn</string>
    <string name="position_drawing">drawing upper</string>
    <string name="position_sewing">sewing upper</string>
    <string name="position_assembling">assembling</string>
    <string name="position_sole_stitching">sewing outsole</string>
    <string name="position_lining_drawing">drawing lining</string>
    <string name="position_insole_stitching">sewing insole</string>
    <string name="nav_drawer_product_title">Shoe</string>
    <string name="nav_drawer_worker_title">Artisan</string>
    <string name="nav_drawer_work_title">Job</string>
    <string name="nav_drawer_report_title">Report</string>
    <string name="unauthorized_unless_admin_work">Contact Production Manager to edit</string>
    <string name="unauthorized_unless_admin_price">Contact Accounting to edit</string>
    <string name="unauthorized_unless_superuser">Concact Administrator to edit</string>
    <string name="product_list_title">Shoes</string>
    <string name="product_list_article_no">Article: %s</string>
    <string name="product_list_color">Color: %s</string>
    <string name="product_list_drawing_cost">Draw Upper Cost: %s</string>
    <string name="product_list_sewing_cost">Sew Upper Cost: %s</string>
    <string name="product_list_assembling_cost">Assembly Cost: %s</string>
    <string name="product_list_sole_stitching_cost">Sew Outsole Cost: %s</string>
    <string name="product_list_insole_stitching_cost">Sew Insole Cost: %s</string>
    <string name="product_list_lining_drawing_cost">Draw Lining Cost: %s</string>
    <string name="product_list_article_with_cat">%1s - %2s</string>
    <string name="product_create_title">Add Shoe</string>
    <string name="product_create_article_no_hint">Article</string>
    <string name="product_create_color_hint">Color</string>
    <string name="product_create_drawing_cost_hint">Draw Upper Cost</string>
    <string name="product_create_sewing_cost_hint">Sew Upper Cost</string>
    <string name="product_create_assembling_cost_hint">Assembly Cost</string>
    <string name="product_create_sole_stitching_cost_hint">Sew Upper Cost</string>
    <string name="product_create_lining_drawing_cost_hint">Draw Lining Cost</string>
    <string name="product_create_insole_stitching_cost_hint">Sew Insole Cost</string>
    <string name="product_create_save">Save</string>
    <string name="product_create_category">Category</string>
    <string name="product_edit_title">Edit Shoe</string>
    <string name="worker_list_title">Artisans</string>
    <string name="worker_list_name">Name: %s</string>
    <string name="worker_list_position">Position: %s</string>
    <string name="worker_create_title">Add Artisan</string>
    <string name="worker_create_name_hint">Name</string>
    <string name="worker_create_position_hint">Position</string>
    <string name="worker_edit_title">Edit Artisan</string>
    <string name="worker_detail_title">Detail Tukang</string>
    <string name="worker_detail_assign_work">Assign Job</string>
    <string name="worker_detail_header_on_progress">Jobs In Progress</string>
    <string name="worker_detail_header_done">Jobs Completed</string>
    <string name="worker_detail_all_works_assigned">All jobs in this category are assigned</string>
    <string name="work_list_title">Jobs</string>
    <string name="work_list_spk_no">Job Order No: %s</string>
    <string name="work_list_product_id">Article: %s</string>
    <string name="work_list_quantity">Quantity: %s pairs</string>
    <string name="work_list_work_type">Job Type: %s</string>
    <string name="work_list_draw_stats">Upper Drawn</string>
    <string name="work_list_sew_stats">Upper Sewn</string>
    <string name="work_list_assemble_stats">Assembled</string>
    <string name="work_list_sole_stitch_stats">Outsole Sewn</string>
    <string name="work_list_insole_stitching_status">Insole Sewn</string>
    <string name="work_list_lining_drawing_status">Lining Drawn</string>
    <string name="work_list_date_done">Copmpleted date: %s</string>
    <string name="work_list_date_created">Job Order date: %s</string>
    <string name="work_list_date_updated">Last updated: %s</string>
    <string name="work_create_title">Add Job</string>
    <string name="work_create_spk_no">Job Order No.</string>
    <string name="work_create_product_id">Product ID</string>
    <string name="work_create_quantity">Quantity</string>
    <string name="work_create_notes">Notes</string>
    <string name="work_detail_title">Job Detail</string>
    <string name="work_detail_assigned_to">%1s %2s</string>
    <string name="work_detail_done_by">%1s %2s</string>
    <string name="work_edit_title">Edit Job</string>
    <string name="worker_work_date">Completed Date</string>
    <string name="worker_work_date_later_warning">Date cannot exceed today</string>
    <string name="worker_work_nothing_chosen_warning">No job selected</string>
    <string name="worker_work_successful">Job Order No. %1s article %2s %3s by %4s</string>
    <string name="choose_position_title">Choose position</string>
    <string name="worker_work_choose_work">Choose Job</string>
    <string name="report_title">Report</string>
    <string name="report_start_date">Search</string>
    <string name="report_end_date">Until</string>
    <string name="report_total_cost">%s</string>
    <string name="report_total_cost_label">Total: </string>
    <string name="report_total_label">Total</string>
    <string name="report_subtotal_label">Subtotal</string>
    <string name="report_total_qty">%s pairs</string>
    <string name="report_total_formulae">%d x %1s = %2s</string>
    <string name="report_total_qty_label">"Total quantity: "</string>
    <string name="report_total_worked_qty">Total jobs: %s pairs</string>
    <string name="report_item_name">Name: %s</string>
    <string name="report_item_total_cost">Salary: %s</string>
    <string name="report_item_total_qty">Total quantity: %s pasang</string>
    <string name="report_detail_title">Jobs Detail</string>
    <string name="report_detail_sub_header">Jobs Completed</string>
    <string name="report_detail_unit_price">Unit Cost: %s</string>
    <string name="report_detail_total_cost">Total: </string>
    <string name="report_detail_total_qty">"Total jobs: "</string>
    <string name="report_detail_total_qty_unit">%d pairs</string>
    <string name="searchable_spinner_hint">Search</string>
    <string name="confirm_delete_question">Are you sure you want to delete %d items?</string>
    <string name="confirm_delete_ok">OK</string>
    <string name="confirm_delete_cancel">Cancel</string>
    <string name="sign_in_username">Username</string>
    <string name="sign_in_password">Password</string>
    <string name="sign_in_button">Sign In</string>
    <string name="sign_in_no_account_qn">Don\'t have an account yet?</string>
    <string name="sign_in_register_now">Register now</string>
    <string name="register_first_name">First name</string>
    <string name="register_last_name">Last name</string>
    <string name="register_password_confirm">Confirm password</string>
    <string name="register_button">Register</string>
    <string name="register_role_hint">Role</string>
    <string name="register_role_admin_work">Production Manager</string>
    <string name="register_role_admin_price">Accounting</string>
    <string name="register_role_quality_assurance">Quality Assurance</string>
    <string name="filter_sort_title">Filter and Sort</string>
    <string name="filter_status" formatted="false"><![CDATA[Filter: %1s &nbsp; Sort: %2s]]></string>
    <string name="sort_status">Sort: %s</string>
    <string name="filter_title">Filter</string>
    <string name="filter_by_position">Filter by Position</string>
    <string name="filter_by_date">Filter by Date</string>
    <string name="filter_sort_by_article_no">Article</string>
    <string name="filter_sort_by_date">Job Order Date</string>
    <string name="filter_sort_by_done_at">Completed At</string>
    <string name="filter_sort_by_assigned_at">Assigned At</string>
    <string name="filter_by">Filter by</string>
    <string name="filter_date_type_hint">Date type</string>
    <string name="sort_title">Sort</string>
    <string name="sort_by_hint">Sort by</string>
    <string name="sort_apply">Apply</string>
    <string name="sort_name">Name</string>
    <string name="sort_asc">A➝Z</string>
    <string name="sort_desc">Z➝A</string>
    <string name="assigned_work_quantity">%1d from %2d pairs</string>
    <string name="assigned_work_quantity_remaining">%1d pairs remaining</string>
    <string name="assigned_work_date_assigned">Assigned at %s</string>
    <string name="assigned_work_date_done">Completed at %1s</string>
    <string name="work_assign_title">Assign Job</string>
    <string name="salary_report_label_draw">D. Upper</string>
    <string name="salary_report_label_lining_draw">D. Lining</string>
    <string name="salary_report_label_sew">S. Upper</string>
    <string name="salary_report_label_assemble">Assembly</string>
    <string name="salary_report_label_outsole_stitch">S. Outsole</string>
    <string name="salary_report_label_insole_stitch">S. Insole</string>
</resources>