<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_worker_create_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/worker_create_name_hint"
        android:layout_margin="@dimen/activity_vertical_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_worker_create_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="textPersonName"
            android:imeOptions="actionDone"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_worker_create_position_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/worker_create_position_hint"
        android:fontFamily="sans-serif-medium"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_worker_create_name"/>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/cb_worker_create_drawer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/position_drawer"
        android:paddingStart="8dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@id/tv_worker_create_position_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/cb_worker_create_lining_drawer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/position_lining_drawer"
        android:paddingStart="8dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@id/cb_worker_create_drawer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/cb_worker_create_sewer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/position_sewer"
        android:paddingStart="8dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@id/cb_worker_create_lining_drawer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/cb_worker_create_assembler"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/position_assembler"
        android:paddingStart="8dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@id/cb_worker_create_sewer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/cb_worker_create_sole_stitcher"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/position_sole_stitcher"
        android:paddingStart="8dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@id/cb_worker_create_assembler"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/cb_worker_create_insole_stitcher"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/position_insole_stitcher"
        android:paddingStart="8dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@id/cb_worker_create_sole_stitcher"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_worker_create_error_choose_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/cb_worker_create_insole_stitcher"
        app:layout_constraintStart_toStartOf="@id/cb_worker_create_sole_stitcher"/>

    <include layout="@layout/layout_alpha_progress_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>