<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_work_create_spk_no"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/work_create_spk_no"
        android:layout_margin="@dimen/activity_vertical_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_work_create_spk_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="number"
            android:imeOptions="actionNext"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_work_create_article_no"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/product_create_article_no_hint"
        android:layout_margin="@dimen/activity_vertical_margin"
        app:layout_constraintTop_toBottomOf="@id/til_work_create_spk_no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_work_create_article_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="number"
            android:imeOptions="actionNext"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_work_create_quantity"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/work_create_quantity"
        android:layout_margin="@dimen/activity_vertical_margin"
        app:layout_constraintTop_toBottomOf="@id/til_work_create_article_no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_work_create_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:maxLength="2"
            android:inputType="number"
            android:imeOptions="actionNext"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_work_create_notes"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/work_create_notes"
        android:layout_margin="@dimen/activity_vertical_margin"
        app:counterEnabled="true"
        app:counterMaxLength="120"
        app:layout_constraintTop_toBottomOf="@id/til_work_create_quantity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_work_create_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="3"
            android:maxLength="120"
            android:inputType="textMultiLine" />
    </com.google.android.material.textfield.TextInputLayout>

    <include layout="@layout/layout_alpha_progress_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>